[gd_scene load_steps=22 format=3 uid="uid://vwfaixjbvl6j"]

[ext_resource type="Script" path="res://Levels/Scene_changer.gd" id="1_t6044"]
[ext_resource type="Texture2D" uid="uid://bw5ms55wbs345" path="res://Textures/UI/In Race/In race hud gauge.png" id="3_xfv50"]
[ext_resource type="Script" path="res://Levels/Race_Hud_Gauges.gd" id="4_vtgkr"]
[ext_resource type="Texture2D" uid="uid://cn45aidbynjcq" path="res://Textures/UI/In Race/In race hud gauge rpm.png" id="5_2nwov"]
[ext_resource type="Texture2D" uid="uid://dvhtnwuxpq62o" path="res://Textures/UI/In Race/In race hud gauge boost.png" id="6_5b4p7"]
[ext_resource type="Texture2D" uid="uid://dc1abys8qkai2" path="res://Textures/UI/In Race/In race hud gauge hybrid.png" id="7_am5vm"]
[ext_resource type="Texture2D" uid="uid://cqi2q66pj8sfu" path="res://Textures/UI/In Race/In race hud gauge temperature.png" id="8_vmudc"]
[ext_resource type="Texture2D" uid="uid://sls8i3whvytm" path="res://Textures/UI/In Race/Start Lights.png" id="9_hg1wg"]
[ext_resource type="Script" path="res://UI/Race UI/Start Lights.gd" id="10_5ep03"]
[ext_resource type="Texture2D" uid="uid://ctgrd0bewx4qk" path="res://Textures/UI/In Race/Start Lights_Light.png" id="11_ofdeh"]
[ext_resource type="AudioStream" uid="uid://dvlc8bt8bi17a" path="res://Sound/StartLights.mp3" id="12_eomrl"]
[ext_resource type="PackedScene" uid="uid://dxscpexiaytjn" path="res://Game_Logic/post_race.tscn" id="13_41xn7"]
[ext_resource type="Texture2D" uid="uid://dkb5c24vbdukd" path="res://Textures/UI/Minimaps/Costal Circuit Minimap.png" id="14_epntl"]
[ext_resource type="Script" path="res://Levels/Minimap.gd" id="15_mi03w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tn2f"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 0, 329, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkeoo"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 135, 329, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ocrf"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 270, 329, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujea"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 405, 329, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns6pn"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 540, 329, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xryj"]
atlas = ExtResource("11_ofdeh")
region = Rect2(0, 675, 329, 135)

[sub_resource type="SpriteFrames" id="SpriteFrames_5r1yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tn2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkeoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ocrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns6pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xryj")
}],
"loop": false,
"name": &"Start",
"speed": 1.0
}]

[node name="Track" type="Node2D"]
process_mode = 1
script = ExtResource("1_t6044")
metadata/_edit_horizontal_guides_ = []

[node name="Track" type="SubViewportContainer" parent="."]
texture_filter = 1
offset_right = 2560.0
offset_bottom = 1440.0
metadata/_edit_use_anchors_ = true

[node name="Track_View" type="SubViewport" parent="Track"]
handle_input_locally = false
mesh_lod_threshold = 0.0
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(2560, 1440)
render_target_update_mode = 4

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2277.29
offset_top = 1238.92
offset_right = 2317.29
offset_bottom = 1278.92

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI"]
layout_mode = 2
offset_left = -2277.0
offset_top = -1239.0
offset_right = 282.0
offset_bottom = 201.0

[node name="Gauge" type="Sprite2D" parent="UI/AspectRatioContainer"]
position = Vector2(2299.65, 1227.58)
scale = Vector2(4, 4)
texture = ExtResource("3_xfv50")
script = ExtResource("4_vtgkr")

[node name="RPM" type="Sprite2D" parent="UI/AspectRatioContainer/Gauge"]
rotation = -2.79253
texture = ExtResource("5_2nwov")

[node name="Boost" type="Sprite2D" parent="UI/AspectRatioContainer/Gauge"]
position = Vector2(-63.6677, 25.6482)
rotation = -1.29937
texture = ExtResource("6_5b4p7")
offset = Vector2(63.6677, -25.6482)

[node name="Hybrid Power" type="Sprite2D" parent="UI/AspectRatioContainer/Gauge"]
texture = ExtResource("7_am5vm")

[node name="Temperature" type="Sprite2D" parent="UI/AspectRatioContainer/Gauge"]
position = Vector2(-0.0855103, -21.0161)
texture = ExtResource("8_vmudc")
offset = Vector2(0.0855103, 21.0161)

[node name="Speed" type="Label" parent="UI/AspectRatioContainer/Gauge"]
offset_left = -6.16681
offset_top = 18.0417
offset_right = 41.8332
offset_bottom = 69.0417
scale = Vector2(0.28, 0.28)
theme_override_colors/font_color = Color(0.266667, 0.462745, 1, 1)
text = "250"
horizontal_alignment = 1

[node name="Gear" type="Label" parent="UI/AspectRatioContainer/Gauge"]
offset_left = -6.16681
offset_top = 7.57362
offset_right = 41.8332
offset_bottom = 58.5736
scale = Vector2(0.28, 0.28)
theme_override_colors/font_color = Color(0.266667, 0.462745, 1, 1)
text = "4"
horizontal_alignment = 1

[node name="Boost_Text" type="Label" parent="UI/AspectRatioContainer/Gauge"]
offset_left = -66.8886
offset_top = 28.6934
offset_right = -18.8886
offset_bottom = 79.6934
scale = Vector2(0.155, 0.155)
theme_override_colors/font_color = Color(0.266667, 0.462745, 1, 1)
text = "0.8"
horizontal_alignment = 1

[node name="Start Lights" type="Sprite2D" parent="UI/AspectRatioContainer"]
position = Vector2(1280, 720)
scale = Vector2(3, 3)
texture = ExtResource("9_hg1wg")
offset = Vector2(0.57251, -0.019989)
script = ExtResource("10_5ep03")

[node name="Timer" type="Timer" parent="UI/AspectRatioContainer/Start Lights"]
wait_time = 5.5
one_shot = true

[node name="Lights" type="AnimatedSprite2D" parent="UI/AspectRatioContainer/Start Lights"]
sprite_frames = SubResource("SpriteFrames_5r1yl")
animation = &"Start"

[node name="Press Button Text" type="Label" parent="UI/AspectRatioContainer/Start Lights"]
offset_left = -164.0
offset_top = 66.0
offset_right = 276.0
offset_bottom = 117.0
scale = Vector2(0.745, 0.745)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "[Press Any Key To Continue]"
horizontal_alignment = 1

[node name="Start_Sound" type="AudioStreamPlayer" parent="UI/AspectRatioContainer/Start Lights"]
stream = ExtResource("12_eomrl")
volume_db = -5.0

[node name="Post Race" parent="UI" node_paths=PackedStringArray("map_viewport") instance=ExtResource("13_41xn7")]
layout_mode = 2
offset_left = -997.29
offset_top = -515.92
offset_right = -997.29
offset_bottom = -515.92
scale = Vector2(3, 3)
map_viewport = NodePath("../../Track/Track_View")

[node name="Current Time" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -2239.98
offset_top = -1237.17
offset_right = -2003.98
offset_bottom = -1186.17
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Current: 0:15:00"

[node name="Record Time" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = -2239.98
offset_top = -1148.33
offset_right = -2003.98
offset_bottom = -1097.33
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Record: 0:15:00"

[node name="Position" type="Label" parent="UI"]
layout_mode = 0
offset_left = -131.14
offset_top = -1238.09
offset_right = 104.86
offset_bottom = -1187.09
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Position: 6/8"

[node name="Lap Count" type="Label" parent="UI"]
layout_mode = 0
offset_left = -2.29015
offset_top = -1156.92
offset_right = 233.71
offset_bottom = -1105.92
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "LAP: 1/3"

[node name="Minimap" type="Sprite2D" parent="UI"]
position = Vector2(-1963.26, 0)
texture = ExtResource("14_epntl")
script = ExtResource("15_mi03w")

[connection signal="timeout" from="UI/AspectRatioContainer/Start Lights/Timer" to="UI/AspectRatioContainer/Start Lights" method="_on_timer_timeout"]
[connection signal="finished" from="UI/AspectRatioContainer/Start Lights/Start_Sound" to="UI/AspectRatioContainer/Start Lights" method="_on_start_sound_finished"]
